# aws-cdk-python-template

./: .gitignore  app.py  cdk.json  pyproject.toml
cdk/stacks/: cdk_example_stack.py
